# FastAPI-template

./: README.md  config.py  main.py  misc.py  pyproject.toml
app/db/: models.py
app/db/crud/: base.py
app/routes/exceptions/: binding.py  handlers.py  models.py
app/routes/v1/: crud_dependencies.py  route_binding.py
app/routes/v1/_test_template/: crud.py  dependencies.py  handlers.py
app/routes/v1/docs/: handlers.py
app/routes/v1/security/: auth.py  context.py  handlers.py
app/routes/v1/users/: crud.py  dependencies.py  handlers.py  schemas.py
app/schemas/: base.py
app/swagger/: html.py  render.py
migrations/: env.py
